crates/language-v2/tests/src/fail/p2_specifiers/evm_target_not_found/test.stderr
error: EVM target 'Shanghai' does not exist in the language definition.
  --> src/fail/p2_specifiers/evm_target_not_found/test.rs:25:83
   |
25 |             definitions = [BuiltInDefinition(name = MyBuiltIn, evm_enabled = From(Shanghai))]
   |                                                                                   ^^^^^^^^
